# GutMicrobe-Virus

./: .gitignore  Makefile  README.md  all_down_software.py  cleanup.py  config.ini  down_software.py  environment.yml  gmv  index.html  make.py  make.sh  make_down.sh  pyproject.toml  qua_indi.py  requirements.txt  run.py  run_all_downstream.py  run_downstream.py  run_upstream.py  software.py  submit.py  test.sh  tools.py  up_software.py  upstream.yaml  utils.py  viruslib_pipeline.py
.github/workflows/: pages.yml
config/: config.yaml  containers.yaml  pipeline.yaml
core/: __init__.py  config.py  config_manager.py  executor.py  logger.py  monitor.py
doc/: checkv.md  genomad.md  virsorter2.md
docs/: 404.html  AGENT_CHAT.md  ARCHITECTURE.md  MIGRATION_V1_TO_V2.md  README.md  RELEASE_MILESTONES.md  SERVER_RUNBOOK.md  index.html
docs/archive/: 2026-02-15-gmv-v2-cfff-direct-run-design.md
docs/assets/: app.js  style.css
down_tools/: Co-occurrence Network.ipynb  analysis.ipynb  fresh_data.ipynb  phagcn.csv  phagehost.ipynb  phahost.csv  significant_viruses.csv
examples/: cherry_prediction.tsv  control.dif.txt  control.down.txt  control.up.txt  merged_counts.tsv  otu_Flattening.csv  phagcn_prediction.tsv  phatyp_prediction.tsv
modules/: __init__.py  abundance_analysis.py  filter.py  preprocessing.py  virus_analysis.py  virus_combine.py  virus_detection.py  virus_filter.py  virus_quality.py  viruslib.py
profiles/local/: config.yaml
profiles/slurm/: config.yaml
raw/: README.md
software/: all_down_software.py  down_software.py  filter.py  paths.py  tools.py  up_software.py  virus_find.py
src/: config.py  logger.py  utils.py
src/gmv/: __init__.py  __main__.py  cli.py  config.py  config_schema.py  reporting.py  validation.py
src/pipeline/: preprocessing.py  quality.py  virus_detection.py
tests/integration/: test_chatops.py  test_cli_commands.py  test_cli_smoke.py  test_workflow_run.py
tests/unit/: test_ai_settings.py  test_chat_executor.py  test_chat_tools.py  test_common_run_cmd.py  test_config.py  test_config_schema.py  test_policy_engine.py  test_project_downstream.py  test_reporting.py  test_steps_dispatch.py  (+5 more)
utils/: __init__.py  common.py  environment.py  logging.py  paths.py  tools.py
workflow/: Snakefile
(+48 files in other folders)
