[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gutmicrobevirus"
version = "3.0.0a0"
description = "Offline-first viral metagenomics detection system with Snakemake, Singularity, SLURM and ChatOps"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "GutMicrobeVirus Contributors" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6"
]

[project.scripts]
gmv = "gmv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
