[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmv"
version = "4.0.0"
description = "GutMicrobeVirus v4: offline virome workflow with Snakemake + Singularity + ChatOps"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "GMV Team" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[project.scripts]
gmv = "gmv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
